--- a/docs/00.目录页/04.更多.md
+++ b/docs/00.目录页/04.更多.md
@@ -14,5 +14,5 @@ comment: false
 editLink: false
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
