--- a/docs/04.更多/01.学习/03.提高记忆的技巧.md
+++ b/docs/04.更多/01.学习/03.提高记忆的技巧.md
@@ -9,7 +9,7 @@ tags:
   - null
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 提高记忆的技巧
 
