--- a/docs/04.更多/01.学习/05.处理问题的思路.md
+++ b/docs/04.更多/01.学习/05.处理问题的思路.md
@@ -9,7 +9,7 @@ tags:
   - null
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 处理问题的思路
 
