--- a/docs/04.更多/10.实用技巧/01.2分钟规则.md
+++ b/docs/04.更多/10.实用技巧/01.2分钟规则.md
@@ -10,7 +10,7 @@ tags:
   - 文摘
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 
 每当你发现很难开始执行某项任务时，可以试试将其缩减成2分钟的版本。
