--- a/docs/04.更多/99.友情链接.md
+++ b/docs/04.更多/99.友情链接.md
@@ -6,7 +6,7 @@ article: false
 sidebar: false
 author:
   name: xiao-sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 
 <!--
