--- a/docs/05.关于/01.关于.md
+++ b/docs/05.关于/01.关于.md
@@ -6,7 +6,7 @@ sidebar: false
 article: false
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 
 ## 📚Blog
