--- a/docs/06.收藏夹/01.网站.md
+++ b/docs/06.收藏夹/01.网站.md
@@ -5,7 +5,7 @@ date: 2020-04-19 11:33:04
 article: false
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 个人收藏夹
 
