--- a/docs/06.收藏夹/02.常用的前端轮子.md
+++ b/docs/06.收藏夹/02.常用的前端轮子.md
@@ -5,7 +5,7 @@ permalink: /pages/47cf96/
 article: false
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 
 ## React UI 组件库
