--- a/docs/_posts/随笔/我是如何发现临时邮箱的？一个真实的故事.md
+++ b/docs/_posts/随笔/我是如何发现临时邮箱的？一个真实的故事.md
@@ -9,7 +9,7 @@ tags:
   -
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 
 # 我是如何发现临时邮箱的？一个真实的故事
