--- a/docs/《Git》学习笔记/10.手册/06.Git命令思维导图.md
+++ b/docs/《Git》学习笔记/10.手册/06.Git命令思维导图.md
@@ -8,6 +8,6 @@ tags:
   - Git
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 ![Git命令思维导图](/img/git.png)
