--- a/docs/04.更多/01.学习/02.提高学习效率的策略.md
+++ b/docs/04.更多/01.学习/02.提高学习效率的策略.md
@@ -9,7 +9,7 @@ tags:
   - null
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 提高学习效率的策略
 
