--- a/docs/04.更多/01.学习/04.自律小建议.md
+++ b/docs/04.更多/01.学习/04.自律小建议.md
@@ -9,7 +9,7 @@ tags:
   - null
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 自律小建议
 
