--- a/docs/04.更多/03.面试/01.面试问题集锦.md
+++ b/docs/04.更多/03.面试/01.面试问题集锦.md
@@ -9,7 +9,7 @@ tags:
   - null
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 面试问题集锦
 
