--- a/docs/04.更多/05.心情杂货/10.反向拆解让人上瘾的套路，找回自律.md
+++ b/docs/04.更多/05.心情杂货/10.反向拆解让人上瘾的套路，找回自律.md
@@ -10,7 +10,7 @@ tags:
   - 自律
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # 反向拆解让人上瘾的套路，找回自律
 
