--- a/docs/_posts/随笔/你知道的越多，不知道的也就越多.md
+++ b/docs/_posts/随笔/你知道的越多，不知道的也就越多.md
@@ -11,7 +11,7 @@ tags:
   - 鸡汤
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 
 不知道大家有没有发现，我们身边经常有这样的人，他们越是有能力的，越是有知识的，越是低调，越是谦逊，因为他们深知，知道的越多，不知道的也就越多。
