--- a/docs/《Git》学习笔记/10.手册/03.Git变基合并.md
+++ b/docs/《Git》学习笔记/10.手册/03.Git变基合并.md
@@ -8,7 +8,7 @@ tags:
   - Git
 author:
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # rebase分支合并
 
