--- a/docs/《Git》学习笔记/20.文档笔记/10.Git基础与命令.md
+++ b/docs/《Git》学习笔记/20.文档笔记/10.Git基础与命令.md
@@ -8,7 +8,7 @@ tags:
   - Git
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # Git基础与命令
 
