--- a/docs/《Git》学习笔记/20.文档笔记/110.Git工具-重置揭密.md
+++ b/docs/《Git》学习笔记/20.文档笔记/110.Git工具-重置揭密.md
@@ -8,7 +8,7 @@ tags:
   - Git
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # Git 工具 - 重置揭密
 
