--- a/docs/《Git》学习笔记/20.文档笔记/30.Git分支的新建与合并-分支操作.md
+++ b/docs/《Git》学习笔记/20.文档笔记/30.Git分支的新建与合并-分支操作.md
@@ -8,7 +8,7 @@ tags:
   - Git
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # Git分支的新建与合并-分支操作
 
