--- a/docs/《Git》学习笔记/20.文档笔记/90.Git工具-交互式暂存.md
+++ b/docs/《Git》学习笔记/20.文档笔记/90.Git工具-交互式暂存.md
@@ -8,7 +8,7 @@ tags:
   - Git
 author: 
   name: xiao_sl
-  link: https://github.com/xiao-cell
+  link: https://github.com/xiaosl-cell
 ---
 # Git工具-交互式暂存
 
