大模型API调用

--- a/docs/01.基础知识/01.提示词工程/01.基本概念.md
+++ b/docs/01.基础知识/01.提示词工程/01.基本概念.md
@@ -1,5 +1,5 @@
 ---
-title: 提示词基本概念
+title: 1. 提示词基本概念
 date: 2025-09-05 14:27:01
 permalink: /prompt-base/
 sidebar: true
@@ -14,16 +14,13 @@ tags:
   - 提示词
 ---
 
-
-# Prompt 工程
-
-## 什么是 Prompt
+## 1.1 什么是 Prompt
 
 一言以蔽之：**Prompt（提示词）是引导大语言模型对既定任务生成符合预期结果的语言文本。**
 
-## Prompt 类型
+## 1.2 Prompt 类型
 
-### 指令型
+### 1.2.1 指令型
 直接告诉模型具体任务，适合解决明确问题。
 
 **示例：**
@@ -31,7 +28,7 @@ tags:
 请将以下文本翻译为英文：'我喜欢学习人工智能。'
 ```
 
-### 开放式
+### 1.2.2 开放式
 提供灵感或自由回答的机会，适合生成创意内容。
 
 **示例：**
@@ -39,7 +36,7 @@ tags:
 写一篇关于未来世界的短故事。
 ```
 
-### 补全型
+### 1.2.3 补全型
 提供部分输入，让模型补全剩余部分。
 
 **示例：**
@@ -47,35 +44,29 @@ tags:
 在未来，人类与人工智能将共存，人工智能将主要负责……
 ```
 
-## 提示词工程
+## 1.3 提示词工程
 
-### 什么是提示词工程
+### 1.3.1 什么是提示词工程
 
 上文已解释过什么是提示词，**提示词工程则是设计和优化提示词，以有效引导大语言模型（LLM）执行特定任务的各种方法论。** 通过精心构建提示词，用户可以控制模型的输出，提高生成内容的准确性、相关性和质量。
 
-### 提升提示词效果的六大策略
+### 1.3.2 提升提示词效果的六大策略
 
-#### 指令清晰
-确保提示词明确、详细，提供必要的上下文和细节，避免模糊或含糊不清的描述，有助于模型准确理解需求，减少误解或错误。
+- **指令清晰**：确保提示词明确、详细，提供必要的上下文和细节，避免模糊或含糊不清的描述，有助于模型准确理解需求，减少误解或错误。
 
-#### 提供示例
-在提示词中包含相关的参考资料或示例，帮助模型更好地理解任务要求，并生成符合预期的输出。
+- **提供示例**：在提示词中包含相关的参考资料或示例，帮助模型更好地理解任务要求，并生成符合预期的输出。
 
-#### 将复杂的任务拆分为简单的子任务
-将复杂的请求分解为多个简单的步骤，逐步引导模型完成每个子任务，以提高整体准确性和效果。
+- **将复杂的任务拆分为简单的子任务**：将复杂的请求分解为多个简单的步骤，逐步引导模型完成每个子任务，以提高整体准确性和效果。
 
-#### 给模型时间"思考"
-通过在提示词中加入"让我们一步步思考"（let's step by step）等引导语，鼓励模型进行逐步推理，减少直接给出错误答案的可能性。
+- **给模型时间"思考"**：通过在提示词中加入"让我们一步步思考"（let's step by step）等引导语，鼓励模型进行逐步推理，减少直接给出错误答案的可能性。
 
-#### 使用外部工具
-在需要时，结合外部工具（如代码解释器、检索系统）来辅助模型完成特定任务，提升整体性能。
+- **使用外部工具**：在需要时，结合外部工具（如代码解释器、检索系统）来辅助模型完成特定任务，提升整体性能。
 
-#### 系统地测试变更
-在修改提示词或策略后，进行系统化的测试，评估其对模型输出的影响，确保改进措施的有效性。
+- **系统地测试变更**：在修改提示词或策略后，进行系统化的测试，评估其对模型输出的影响，确保改进措施的有效性。
 
-## 提示词技术
+## 1.4 提示词技术
 
-### 零样本（Zero-Shot）提示
+### 1.4.1 零样本（Zero-Shot）提示
 零样本学习指的是模型在没有看到任何具体示例的情况下完成任务的能力，即模型仅依靠训练时的的知识泛化能力来理解和执行任务。
 
 **示例：**
@@ -86,7 +77,7 @@ tags:
 输出：中性
 ```
 
-### 少样本（Few-Shot）提示
+### 1.4.2 少样本（Few-Shot）提示
 模型在看到少量示例后完成任务的能力，示例通常为提示词的一部分，旨在帮助模型更好的理解任务的上下文或期望的输出格式。
 
 **示例：**
@@ -103,7 +94,7 @@ tags:
 输出：篮球
 ```
 
-### 思维链（Chain-of-Thought）提示
+### 1.4.3 思维链（Chain-of-Thought）提示
 通过要求模型在给出最终答案之前，展示中间思考过程（即逐步推理过程）来帮助模型生成更加准确和合理的答案以增强模型推理能力的提示词方法。
 
 **示例：**
@@ -127,7 +118,7 @@ tags:
 答：将所有奇数相加（15, 5, 13, 7, 1），得到 41。答案是 False。
 ```
 
-### 零样本思维链提示
+### 1.4.4 零样本思维链提示
 不依赖任何额外训练数据的情况下，通过特定的提示文本，如在问题结尾附加"Let's think step by step"等，激发模型在没有示例的情况下生成推理链条，从而引导模型进行推理。
 
 **示例：**
@@ -139,7 +130,7 @@ tags:
 
 *注：这个示例由于各个大模型都变强了很多，即使不提示也会以思维链的方式来求解，看不到该提示词的效果*
 
-### 自动思维链
+### 1.4.5 自动思维链
 通过自动构建包含问题和推理链的演示，引导模型进行更有条理和逻辑性的思考，以提高模型在回答需要复杂推理的问题时的表现。
 
 自动思维链主要有两个阶段：
@@ -156,7 +147,7 @@ tags:
 **局限性：**
 - 生成的推理链可能存在错误，但可通过增加演示的多样性来减轻影响
 
-## Prompt要素
+## 1.5 Prompt要素
 
 提示词可以包含以下任意要素：
 
@@ -167,14 +158,14 @@ tags:
 
 ![提示词要素](https://qiniu.agiadventurer.com/%E6%8F%90%E7%A4%BA%E8%AF%8D%E8%A6%81%E7%B4%A0.png)
 
-## 如何编写有效的提示词
+## 1.6 如何编写有效的提示词
 
-### 编写流程
+### 1.6.1 编写流程
 
 ![提示词编写流程](https://qiniu.agiadventurer.com/%E6%8F%90%E7%A4%BA%E8%AF%8D%E7%BC%96%E5%86%99%E6%B5%81%E7%A8%8B.png)
 
 
-### 关键点
+### 1.6.2 关键点
 
 编写有效提示词的关键在于以下四点：
 
@@ -183,7 +174,7 @@ tags:
 - **一致性：** 同一个项目中保持提示词的风格和结构一致
 - **针对性：** 提示词要根据具体的应用场景和目标受众来设计
 
-### 一些简单的小技巧
+### 1.6.3 一些简单的小技巧
 
 - **提供示例**
 - **提供多个示例**
