--- a/docs/01.基础知识/01.提示词工程/05.优质 Prompt 资源.md
+++ b/docs/01.基础知识/01.提示词工程/05.优质 Prompt 资源.md
@@ -1,5 +1,5 @@
 ---
-title: 优质提示词资源
+title: 5. 优质提示词资源
 date: 2025-09-05 15:17:20
 permalink: /prompt-ccommunity/
 categories:
@@ -14,9 +14,9 @@ author:
 
 在提示词工程的学习和实践过程中，参考优质的 Prompt 资源和社区分享能够大大提升我们的效率和创意。以下是一些值得关注的 Prompt 共享网站和资源库：
 
-### 开源 Prompt 资源库
+## 5.1 开源 Prompt 资源库
 
-#### 1. GPTs Prompt 泄露库
+### 5.1.1 GPTs Prompt 泄露库
 - **网址：** [https://github.com/linexjlin/GPTs](https://github.com/linexjlin/GPTs)
 - **特色：** 收集了大量泄露出来的高级 GPTs 的 prompt
 - **适用场景：** 学习高质量 GPT 应用的提示词设计思路
@@ -26,7 +26,7 @@ author:
   - 持续更新，紧跟最新趋势
 - **使用建议：** 仅供学习参考，注意版权和使用规范
 
-#### 2. Awesome ChatGPT Prompts
+### 5.1.2 Awesome ChatGPT Prompts
 - **网址：** [https://github.com/f/awesome-chatgpt-prompts](https://github.com/f/awesome-chatgpt-prompts)
 - **特色：** 精选的 ChatGPT 提示词集合
 - **适用场景：** 日常使用和创意灵感
@@ -36,9 +36,9 @@ author:
   - 支持多语言版本
 - **使用建议：** 适合初学者入门和日常参考
 
-### 商业 Prompt 平台
+## 5.2 商业 Prompt 平台
 
-#### 3. PromptBase
+### 5.2.1 PromptBase
 - **网址：** [https://promptbase.com/](https://promptbase.com/)
 - **特色：** 专业的 Prompt 交易市场
 - **适用场景：** 购买和销售高质量 prompt
@@ -48,9 +48,9 @@ author:
   - 详细的使用说明和效果展示
 - **使用建议：** 适合需要专业级 prompt 的商业用途
 
-### 企业级 Prompt 管理
+## 5.3 企业级 Prompt 管理
 
-#### 4. LangChain Hub
+### 5.3.1 LangChain Hub
 - **网址：** [https://smith.langchain.com/hub](https://smith.langchain.com/hub)
 - **特色：** LangChain 官方的 Prompt 管理和分享平台
 - **适用场景：** 企业级应用开发和 Prompt 版本管理
@@ -60,9 +60,9 @@ author:
   - 提供性能分析和优化建议
 - **使用建议：** 适合开发者和企业团队使用
 
-### 如何有效利用这些资源
+## 5.4 如何有效利用这些资源
 
-#### 学习策略
+### 5.4.1 学习策略
 1. **分析优秀案例**
    - 研究成功 prompt 的结构和语言特点
    - 理解不同场景下的设计思路
