--- a/docs/01.基础知识/01.提示词工程/03.LangGPT结构化提示词框架.md
+++ b/docs/01.基础知识/01.提示词工程/03.LangGPT结构化提示词框架.md
@@ -1,5 +1,5 @@
 ---
-title: LangGPT结构化提示词框架
+title: 3. LangGPT结构化提示词框架
 date: 2025-09-05 14:27:01
 permalink: /prompt-langgpt/
 sidebar: true
@@ -16,20 +16,20 @@ tags:
 
 
 
-## 什么是 LangGPT
+## 3.1 什么是 LangGPT
 
 LangGPT 是一个结构化的提示词编写框架，旨在帮助用户更系统、更规范地构建高质量的提示词。它通过标准化的模板和结构，让提示词的编写变得更加清晰、可维护和可复用。
 
 **项目地址：** [https://github.com/langgptai/LangGPT](https://github.com/langgptai/LangGPT)
 
-## LangGPT 的核心理念
+## 3.2 LangGPT 的核心理念
 
 - **结构化思维：** 将复杂的提示词需求分解为标准化的组件
 - **模块化设计：** 每个部分都有明确的职责和作用
 - **可复用性：** 通过模板化的方式提高效率
 - **易维护性：** 清晰的结构便于后续修改和优化
 
-## LangGPT 基本结构
+## 3.3 LangGPT 基本结构
 
 LangGPT 框架主要包含以下核心组件：
 
@@ -55,9 +55,9 @@ LangGPT 框架主要包含以下核心组件：
 [初始化设置]
 ```
 
-## 实际应用示例
+## 3.4 实际应用示例
 
-### 示例：Python 编程助手
+### 3.4.1 示例：Python 编程助手
 
 ```markdown
 # Role: Python编程助手
@@ -94,24 +94,24 @@ LangGPT 框架主要包含以下核心组件：
 作为Python编程助手，我将帮助您解决Python相关的编程问题。请告诉我您遇到的具体问题或需要实现的功能。
 ```
 
-## 使用技巧
+## 3.5 使用技巧
 
-### 1. 角色定义要具体
+### 3.5.1 角色定义要具体
 - 避免过于宽泛的角色定义
 - 明确角色的专业领域和能力边界
 - 考虑目标用户群体
 
-### 2. 技能列表要全面
+### 3.5.2 技能列表要全面
 - 列出核心技能和辅助技能
 - 按重要性排序
 - 包含相关的工具和技术栈
 
-### 3. 规则要明确
+### 3.5.3 规则要明确
 - 设定行为准则和限制条件
 - 定义输出格式和质量标准
 - 考虑安全和伦理要求
 
-### 4. 工作流程要清晰
+### 3.5.4 工作流程要清晰
 - 按逻辑顺序排列步骤
 - 每个步骤都有明确的目标
 - 考虑异常情况的处理
