文件名调整

--- a/docs/01.基础知识/03.OpenAI Tools/02.Code Interpreter.md
+++ b/docs/01.基础知识/03.OpenAI Tools/02.Code Interpreter.md
@@ -1,5 +1,5 @@
 ---
-title: 2. Code Interpreter（代码解释器）
+title: 2. OpenAI-Code Interpreter（代码解释器）
 date: 2025-09-05 16:48:15
 permalink: /tools-code-interpreter/
 sidebar: true
