--- a/docs/01.基础知识/03.OpenAI Tools/03.Function Calling.md
+++ b/docs/01.基础知识/03.OpenAI Tools/03.Function Calling.md
@@ -1,5 +1,5 @@
 ---
-title: 3. Function Calling（函数调用）
+title: 3. OpenAI-Function Calling（函数调用）
 date: 2025-09-05 16:48:15
 permalink: /tools-function-calling/
 sidebar: true
