--- a/docs/01.基础知识/03.OpenAI Tools/01.File Search.md
+++ b/docs/01.基础知识/03.OpenAI Tools/01.File Search.md
@@ -1,5 +1,5 @@
 ---
-title: 1. OpenAI-File Search（文件检索）
+title: 1. 文件检索
 date: 2025-09-05 16:48:15
 permalink: /tools-intro-and-file-search/
 sidebar: true
