--- a/docs/01.基础知识/02.大模型API调用/01.简单示例.md
+++ b/docs/01.基础知识/02.大模型API调用/01.简单示例.md
@@ -17,7 +17,7 @@ tags:
 
 ## 1.1 获取并配置API访问密钥（API Key）
 
-首先，需要在提供大模型API服务的平台（如 OpenAI、DeepSeek、Hugging Face、Azure、Google Cloud等）注册并获取 API 密钥。这些平台会为每个账户生成一个唯一的API密钥，作为对服务的身份认证。
+首先，需要在提供大语言模型（Large Language Model，简称LLM）API服务的平台（如 OpenAI、DeepSeek、Hugging Face、Azure、Google Cloud等）注册并获取 API 密钥。这些平台会为每个账户生成一个唯一的API密钥，作为对服务的身份认证。
 
 ## 1.2 安装所需的 SDK 或库
 
