--- a/docs/01.基础知识/05.检索增强生成(RAG)/02.朴素RAG.md
+++ b/docs/01.基础知识/05.检索增强生成(RAG)/02.朴素RAG.md
@@ -14,7 +14,7 @@ author:
 
 ## 2.1 定义
 
-朴素RAG（Naive RAG）是RAG技术的最基础实现形式，采用最直接的"检索-生成"流程。它遵循简单的线性处理模式：将文档分块、向量化存储、基于相似度检索、直接输入LLM生成答案。朴素RAG虽然实现简单，但在实际应用中往往面临检索精度不高、上下文利用不充分等问题，是理解RAG技术原理和后续优化方向的重要起点。
+朴素RAG（Naive RAG）是RAG技术的最基础实现形式，采用最简单直接的流程。将文档分块、向量化存储、基于相似度检索、直接输入LLM生成答案。朴素RAG虽然实现简单，但在实际应用中往往面临检索精度不高、上下文利用不充分等问题，是理解RAG技术原理和后续优化方向的重要起点。
 
 ## 2.2 朴素RAG的典型架构
 
