--- a/docs/01.基础知识/05.检索增强生成(RAG)/02.朴素RAG.md
+++ b/docs/01.基础知识/05.检索增强生成(RAG)/02.朴素RAG.md
@@ -1,7 +1,7 @@
 ---
 title: 2. 朴素RAG
 date: 2025-09-17 22:41:12
-permalink: /pages/946fae/
+permalink: /rag-naive/
 categories:
   - 基础知识
   - RAG
@@ -12,13 +12,11 @@ author:
   link: https://github.com/xiaosl-cell
 ---
 
-## 2.1 定义
-
 朴素RAG（Naive RAG）是RAG技术的最基础实现形式，采用最简单直接的流程。将文档分块、向量化存储、基于相似度检索、直接输入LLM生成答案。朴素RAG虽然实现简单，但在实际应用中往往面临检索精度不高、上下文利用不充分等问题，是理解RAG技术原理和后续优化方向的重要起点。
 
-## 2.2 朴素RAG的典型架构
+## 2.1 朴素RAG的典型架构
 
-### 2.2.1 知识库构建阶段
+### 2.1.1 知识库构建阶段
 
 ```
 文档预处理 → 分块 → 向量化 → 落库（向量数据库）
@@ -39,7 +37,7 @@ author:
 - 嵌入模型选择：常用模型如text-embedding-ada-002等
 - 向量存储：将文本块及其向量表示存储到向量数据库
 
-### 2.2.2 检索增强生成阶段
+### 2.1.2 检索增强生成阶段
 
 ```
 用户查询 → 查询向量化 → 相似度检索 → Context构建 → LLM生成
@@ -57,7 +55,7 @@ author:
 - Prompt构建：将检索结果与用户查询组合成结构化Prompt
 - LLM调用：输入到大语言模型生成最终答案
 
-## 2.3 朴素RAG的实现示例
+## 2.2 朴素RAG的实现示例
 
 为了更好地理解朴素RAG的工作原理，我们通过一个完整的实际案例来展示其实现过程。假设我们要构建一个基于Llama 2技术论文的智能问答系统，让用户能够通过自然语言查询获取关于Llama 2模型的准确信息。
 
@@ -74,7 +72,7 @@ author:
 
 下面我们按照这个架构逐一实现各个组件。
 
-### 2.3.1 文档提取与切割
+### 2.2.1 文档提取与切割
 
 ```python
 import fitz  # PyMuPDF
@@ -114,7 +112,7 @@ def extract_text_from_pdf(filename, page_numbers=None, min_line_length=1):
     return paragraphs
 ```
 
-### 2.3.2 向量数据库
+### 2.2.2 向量数据库
 
 由于ChromaDB具有轻量级、易于部署的特点，此处Demo我们选择它作为向量数据库
 
@@ -158,7 +156,7 @@ class VectorDBConnector:
         return results
 ```
 
-### 2.3.3 Embedding与LLM集成
+### 2.2.3 Embedding与LLM集成
 
 这里集成了OpenAI的嵌入模型和GPT大语言模型。嵌入模型负责将文本转换为向量表示，GPT模型则负责基于检索到的上下文生成最终答案。通过设计合理的Prompt模板，能够引导模型更好地利用检索到的信息，提高回答的准确性和相关性。
 
@@ -237,7 +235,7 @@ class RAG_Bot:
         return response
 ```
 
-### 2.3.4 系统集成与主函数
+### 2.2.3 系统集成与主函数
 
 将前面实现的所有组件集成起来，构建一个完整的朴素RAG系统。
 
@@ -266,7 +264,7 @@ response = bot.chat(user_query)
 
 print(f"LLM回答：\n{response}")
 ```
-### 2.3.5 运行结果分析
+### 2.2.4 运行结果分析
 
 
 以下是系统处理用户查询"Llama 2有多少参数"的完整过程和结果。从输出可以看到，系统首先从PDF中提取相关文本片段，然后构建包含检索上下文的Prompt，最后让GPT模型基于提供的上下文生成准确答案。
@@ -294,9 +292,9 @@ Llama 2有7B、13B和70B参数的变体。
 
 ```
 
-## 2.4 朴素RAG的局限性
+## 2.3 朴素RAG的局限性
 
-### 2.4.1 检索质量问题
+### 2.3.1 检索质量问题
 
 **语义匹配不准确**：
 - 上下文缺失：单纯的向量相似度无法捕捉复杂的语义关系
@@ -306,7 +304,7 @@ Llama 2有7B、13B和70B参数的变体。
 - 信息冗余：多个相似的文档片段提供重复信息
 - 关键信息遗漏：重要信息可能因为表达方式差异而被遗漏
 
-### 2.4.2 分块策略局限
+### 2.3.2 分块策略局限
 
 **语义完整性破坏**：
 - 跨块信息分割：重要信息被分割到不同的块中
@@ -318,7 +316,7 @@ Llama 2有7B、13B和70B参数的变体。
 - 块太大：包含过多无关信息，影响检索精度
 - 固定分块：无法适应不同类型文档的特点
 
-### 2.4.3 上下文利用不充分
+### 2.3.3 上下文利用不充分
 
 **信息整合能力弱**：
 - 片段化信息：难以整合多个文档片段中的信息
@@ -330,26 +328,26 @@ Llama 2有7B、13B和70B参数的变体。
 - 信息截断：重要信息可能因为长度限制而被截断
 - 优先级不明：无法区分不同检索结果的重要性
 
-### 2.4.4 缺乏反馈机制
+### 2.3.4 缺乏反馈机制
 
 **无法自我优化**：
 - 检索质量无反馈：系统无法知道检索结果的质量
 - 用户满意度未知：缺乏用户反馈收集机制
 - 错误无法纠正：系统无法从错误中学习和改进
 
-## 2.5 朴素RAG的改进方向
+## 2.4 朴素RAG的改进方向
 
-### 2.5.1 检索优化
+### 2.4.1 检索优化
 - 混合检索：结合关键词检索和向量检索
 - 查询扩展：通过同义词、相关词扩展查询
 - 重排序：对检索结果进行二次排序
 
-### 2.5.2 分块优化
+### 2.4.2 分块优化
 - 智能分块：基于文档结构和语义的智能分块
 - 层次化分块：构建文档的层次化表示
 - 动态分块：根据查询动态调整分块策略
 
-### 2.5.3 生成优化
+### 2.4.3 生成优化
 - 多轮检索：根据生成过程动态检索补充信息
 - 答案验证：对生成的答案进行事实性验证
 - 置信度评估：评估答案的可信度
