--- a/docs/01.基础知识/05.检索增强生成(RAG)/01.RAG基本概念.md
+++ b/docs/01.基础知识/05.检索增强生成(RAG)/01.RAG基本概念.md
@@ -29,7 +29,7 @@ RAG不要参考这张图，[Retrieval-Augmented Generation for Knowledge-Intensi
 
 整个工作流可解构为两个主要阶段：知识库构建 和 推理与生成。
 
-### 1.3.1 知识库构建与向量化
+### 1.3.1 知识库构建
 
 这个阶段的目标是**将外部知识源转化为可供高效检索的格式**。
 
@@ -46,6 +46,8 @@ RAG不要参考这张图，[Retrieval-Augmented Generation for Knowledge-Intensi
 
 该阶段在接收到用户请求时被触发，主要为**实时检索与内容生成**。
 
+### 1.3.2.1 查询处理
+
 - **Prompt向量化**：当系统接收到用户的输入（Prompt）后，会使用与知识库构建阶段相同的嵌入模型，将查询文本也转换为一个向量。
 
 - **向量检索**：系统以该查询向量为基准，在向量数据库中执行相似度搜索。通过计算查询向量与数据库中已索引知识向量之间的距离或相似度（如余弦相似度、点积、欧氏距离），检索出与用户查询语义最相关的一个或多个知识块。检索结果通常是一个按相关性分数降序排列的列表。
@@ -56,7 +58,7 @@ RAG不要参考这张图，[Retrieval-Augmented Generation for Knowledge-Intensi
 
   - **构建Prompt**：这些筛选出的知识块作为动态上下文（Context），被整合到一个结构化的提示模板（Prompt Template）中。该模板将原始用户查询和检索到的上下文信息进行格式化编排，形成一个增强后的、信息完备的复合提示（Augmented Prompt）。模板的设计对于引导LLM的注意力、使其聚焦于所提供的上下文至关重要。
 
-### 1.3.3 结果生成
+#### 1.3.3 内容生成
 
 最终，这个增强后的Prompt被输入到大语言模型（LLM）的核心推理引擎中生成响应。LLM在生成回答时，其注意力机制会优先处理提示中明确提供的上下文信息。这使其能够生成基于外部知识源的、事实更为准确、内容更为具体的回复，而不是仅仅依赖其内部存储的、可能已过时的参数化知识。该机制有效缓解了模型的 "幻觉"（Hallucination）问题。
 
