--- a/docs/01.基础知识/05.检索增强生成(RAG)/03.Advanced RAG.md
+++ b/docs/01.基础知识/05.检索增强生成(RAG)/03.Advanced RAG.md
@@ -12,8 +12,9 @@ author:
   link: https://github.com/xiaosl-cell
 ---
 
-Advanced RAG (高级检索增强生成) 并不是一个有唯一、标准定义的术语，它更像是一个总称，指的是在基础RAG框架之上，为解决特定挑战而集成了一系列更复杂、更精细、更智能的技术和策略的优化RAG架构,本文将会按照RAG工作流程，详细介绍Advanced RAG的优化策略。
+Advanced RAG (高级检索增强生成) 并不是一个有唯一、标准定义的术语，它更像是一个总称，指的是在基础RAG框架之上，为解决特定挑战而集成了一系列更复杂、更精细、更智能的技术和策略的优化RAG架构,本文将会按照RAG工作流程，详细介绍Advanced RAG的优化策略，下图取自【huggingface](https://huggingface.co/learn/cookbook/en/advanced_rag)，蓝色标注了系统增强的所有可能性。
 
+![Advanced RAG](https://qiniu.agiadventurer.com/advanced_rag.png)
 
 ## 3.1 知识库构建阶段优化
 
@@ -89,6 +90,3 @@ chunks = text_splitter.split_text(document_text)
 #### 3.1.1.3 语义分割
 
 在实际应用中，由于预定义规则很死板，基于规则的分块方法很容易导致诸如检索上下文不完整或分块过大含有噪声等问题。因此最优雅的方法是基于语义进行分块。语义分块的宗旨是确保每个分块尽可能包含语义上独立的信息。
-
-
-
