--- a/docs/01.基础知识/05.检索增强生成(RAG)/03.Advanced RAG.md
+++ b/docs/01.基础知识/05.检索增强生成(RAG)/03.Advanced RAG.md
@@ -12,17 +12,15 @@ author:
   link: https://github.com/xiaosl-cell
 ---
 
-Advanced RAG (高级检索增强生成) 并不是一个有唯一、标准定义的术语，它更像是一个总称，指的是在基础RAG框架之上，为解决特定挑战而集成了一系列更复杂、更精细、更智能的技术和策略的优化RAG架构,本文将会按照RAG工作流程，详细介绍Advanced RAG的优化策略，下图取自【huggingface](https://huggingface.co/learn/cookbook/en/advanced_rag)，蓝色标注了系统增强的所有可能性。
+Advanced RAG (高级检索增强生成)并不是一个具有标准定义的术语，它泛指在基础RAG架构之上，为应对特定挑战而引入一系列更复杂、精细且智能的技术与策略所形成的优化RAG集合体。本文将遵循RAG的工作流程，详细剖析这些优化策略。下图（源自 [huggingface](https://huggingface.co/learn/cookbook/en/advanced_rag)）以蓝色标注了RAG系统的各项潜在优化方向。
 
 ![Advanced RAG](https://qiniu.agiadventurer.com/advanced_rag.png)
 
-## 3.1 知识库构建阶段优化
+## 3.1 知识库构建阶段
 
-知识库构建阶段是整个RAG系统的基石，其优化策略直接影响到后续的检索效果。
+知识库构建阶段是整个RAG系统的基石，其优化策略直接影响到后续的检索效果。原始数据通常是非结构化的，需要经过一系列精细处理才能转化为可供模型高效检索的格式。高级RAG在此阶段的优化主要集中在 分块优化 (Chunking Optimization)、元数据丰富 (Metadata Enrichment) 和 索引结构优化 (Indexing Optimization) 三个方面。
 
 ### 3.1.1 分块优化 (Chunk Optimization)
-
-分块策略是知识库构建的核心环节，直接决定了检索的粒度和效果。Advanced RAG摒弃了朴素RAG中简单的固定长度切分方法，采用更加智能和语义感知的分块策略。
 
 #### 3.1.1.1 重叠分块
 
