--- a/docs/01.基础知识/08.Agent/01.Agent.md
+++ b/docs/01.基础知识/08.Agent/01.Agent.md
@@ -1,5 +1,5 @@
 ---
-title: 01.Agent概述
+title: 1.Agent概述
 date: 2025-12-03 17:32:18
 permalink: /pages/fe18ba/
 categories:
@@ -12,27 +12,27 @@ author:
   link: https://github.com/xiaosl-cell
 ---
 
-## 什么是智能体？
+## 1.1 什么是智能体？
 
 将大语言模型作为一个**推理引擎**。给定一个任务，智能体自动生成完成任务所需的步骤，执行相应动作（例如选择并调用工具），直到任务完成。
 
 ![Agent](https://qiniu.agiadventurer.com/agent.png)
 
-## 智能体核心组件
+## 1.2 智能体核心组件
 
 - **LLM（大模型）**：作为推理引擎，负责理解任务、生成计划
 - **Tools（工具集）**：执行具体动作，如搜索、计算、API 调用等
 - **Prompt（提示模板）**：引导 LLM 按特定格式进行推理
 - **AgentExecutor（执行器）**：协调整个流程，管理推理-行动循环
 
-## Tools（工具）
+## 1.3 Tools（工具）
 
 先定义一些工具：
 
 - 可以是一个函数或三方 API
 - 也可以把一个 Chain 或者 Agent 的 `run()` 作为一个 Tool
 
-## 常见智能体类型
+## 1.4 常见智能体类型
 
 | 类型 | 特点 | 适用场景 |
 |------|------|----------|
