--- a/docs/01.基础知识/08.Agent/02.ReAct智能体.md
+++ b/docs/01.基础知识/08.Agent/02.ReAct智能体.md
@@ -1,5 +1,5 @@
 ---
-title: 02.ReAct智能体
+title: 2.ReAct智能体
 date: 2025-12-03 17:32:18
 permalink: /pages/fe18bb/
 categories:
@@ -12,7 +12,7 @@ author:
   link: https://github.com/xiaosl-cell
 ---
 
-## ReAct 智能体
+## 2.1 ReAct 智能体
 
 ReAct 智能体的核心在于它能够通过**推理和行动的循环**来解决问题。其流程通常包括：
 
@@ -24,9 +24,9 @@ ReAct 智能体的特点是，它在推理和行动之间有较强的**闭环反
 
 ![ReAct](https://qiniu.agiadventurer.com/agent-react.png)
 
-## 代码示例
+## 2.2 代码示例
 
-### 安装依赖
+### 2.2.1 安装依赖
 
 ```bash
 pip install google-search-results
@@ -34,7 +34,7 @@ pip install --upgrade langchainhub
 pip install python-dateutil
 ```
 
-### 代码实现
+### 2.2.2 代码实现
 
 ```python
 import dotenv
@@ -87,7 +87,7 @@ agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)
 print(agent_executor.invoke({"input": "张杰的老婆的父亲生日是星期几"}))
 ```
 
-### ReAct Prompt 模板
+### 2.2.3 ReAct Prompt 模板
 
 ```text
 Answer the following questions as best you can. You have access to the following tools:
@@ -111,7 +111,7 @@ Question: {input}
 Thought:{agent_scratchpad}
 ```
 
-### 执行过程
+### 2.2.4 执行过程
 
 ```text
 > Entering new AgentExecutor chain...
