Workflow文档格式优化:移除重复标题
- 移除Workflow概述文档中的重复一级标题"AGI时代的Workflow与Agent区别"
- 移除开源翻译工作流文档中的重复一级标题"开源翻译工作流(吴恩达博士)"
- 保留frontmatter中的title字段作为页面标题,避免标题重复显示

--- a/docs/01.基础知识/09.Workflow/02.开源翻译工作流.md
+++ b/docs/01.基础知识/09.Workflow/02.开源翻译工作流.md
@@ -1,5 +1,5 @@
 ---
-title: 2.开源翻译工作流
+title: 2.开源翻译工作流（吴恩达博士）
 date: 2025-12-03 17:49:11
 permalink: /pages/b6948d/
 categories:
@@ -13,8 +13,6 @@ author:
   name: xiao_sl
   link: https://github.com/xiaosl-cell
 ---
-
-# 开源翻译工作流（吴恩达博士）
 
 **项目地址**：[https://github.com/andrewyng/translation-agent](https://github.com/andrewyng/translation-agent)
 
